# kevin

./: .gitignore  README.md  playground.py  pyproject.toml  requirements.txt
kevin/: __init__.py  assistant.py  data.py  defs.py  hotwords.py  inference.py  stt.py  tts.py  waker.py
kevin/data/: __init__.py  chat_completion.py  tools.py
kevin/tools/: __init__.py  base.py  context.py  errors.py  functions.py
kevin/utils/: __init__.py  plugins.py
