[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kevin"
version = "0.1.0"
description = "Python library for building simple virtual assistants"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Izhar Ahmad", email = "thisisizharahmad@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Internet",
    "Topic :: Utilities",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/izxxr/kevin"
Repository = "https://github.com/izxxr/kevin"
Documentation = "https://github.com/izxxr/kevin/wiki"
Issues = "https://github.com/izxxr/kevin/issues"

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

[project.optional-dependencies]
default = [
    "huggingface_hub==0.36.*",
    "SpeechRecognition[faster-whisper]==3.14.*",
    "faster-whisper==1.2.*",
    "piper-tts==1.3.*",
    "pvporcupine==4.0.*",
    "keyboard==0.13.*",
]

[tool.setuptools]
packages = [
    "kevin",
    "kevin.data",
    "kevin.utils",
    "kevin.tools",
]
include-package-data = true

[project.scripts]
prept = "prept.cli.main:cli"